--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Made with create-react-library",
   "author": "wouterkoch",
   "license": "MIT",
-  "repository": "artsdatabanken/clavis-viewer-web",
+  "repository": "artsdatabanken/Clavis-viewer-web",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -38,5 +38,8 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
