--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@artsdatabanken/clavis-viewer-web",
-  "version": "1.1.0",
-  "description": "Made with create-react-library",
+  "version": "1.1.1",
+  "description": "Web viewer for Clavis identification keys",
   "author": "wouterkoch",
   "license": "MIT",
   "repository": "artsdatabanken/Clavis-viewer-web",
