--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,14 +26,17 @@ jobs:
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-      - name: Update npm
-        run: npm install -g npm@latest
+          node-version: 22
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
       - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ""
